<resources>
    <string name="app_name">ElvisMessenger</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="chat_log_enter_msg_hint">Enter message</string>
    <string name="find_user_enter_msg_hint">Username</string>
    <string name="elvis_msg_logo">\?:</string>
    <string name="elvis_msg_logo_elvis_text">Elvis</string>
    <string name="elvis_msg_logo_msg_text">Messenger</string>
    <string name="login_email_address_text">Email address</string>
    <string name="login_password_text">Password</string>
    <string name="login_sign_in_button">Sign in</string>
    <string name="login_new_to_elvis_text">New to ElvisMessenger?</string>
    <string name="login_create_account_text">Create an account</string>
    <string name="registration_username_text">Username</string>
    <string name="registration_create_account_button">Create account</string>
    <string name="choose_text_theme">Choose text theme</string>
    <string name="set_your_text_size">Set your text size</string>
    <string name="chat_settings">Chat Settings</string>
    <string name="drawer_menu_essentials_title">Essentials</string>
    <string name="drawer_menu_settings_title">Settings</string>
    <string name="drawer_menu_contacts_title">Contacts</string>
    <string name="drawer_menu_specials_title">Specials</string>
    <string name="drawer_menu_tech_support_title">Technichal support</string>
    <string name="drawer_menu_create_new_acc_title">Create new account</string>
    <string name="drawer_menu_logout_title">Logout</string>
    <string name="nav_menu_new_friend_title">New friend</string>
    <string name="ban_list">Ban list</string>
    <string name="banned_users">Banned users</string>
    <string name="message">Message</string>
    <string name="message_other">Message</string>
    <string name="_10_00">10:00</string>
    <string name="confirm">Confirm</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="language_settings">Language settings</string>
    <string name="languages">Languages</string>
    <string name="notification_volume">Notification volume</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="set_password">Set password</string>
    <string name="set_new_phone">Set new phone</string>
    <string name="security_settings">Security settings</string>
    <string name="account">Account</string>
    <string name="email">Email</string>
    <string name="passsword">Passsword</string>
    <string name="phone_number">Phone number</string>
    <string name="privacy">Privacy</string>
    <string name="phone_number_visibility">Phone number visibility</string>
    <string name="last_seen_visibility">Last seen visibility</string>
    <string name="who_can_add_to_group">Who can add to group</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="selected_language">selected_language</string>
    <string name="dark_theme">Dark theme</string>
    <string name="sign_in_with_google_text_login">or you can sign in with your Google account</string>
    <string name="test_size_string">Very very long about me test work test test test test test test test testestestststtstttttttttttttttttttttttttttttttttttttttttttttttttttt</string>
    <string name="create_group_chat">Create group chat</string>
</resources>