<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/elvis_main_color">

        <TextView
            android:id="@+id/temp_logo_text_login"
            android:layout_width="127dp"
            android:layout_height="189dp"
            android:layout_marginStart="40dp"
            android:text="@string/elvis_msg_logo"
            android:textColor="@color/elvis_text_color"
            android:textSize="144sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/logo_elvis_text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/elvis_msg_logo_elvis_text"
            android:textColor="@color/elvis_primary_light_variant_color"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/temp_logo_text_login"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/logo_msg_text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:text="@string/elvis_msg_logo_msg_text"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/temp_logo_text_login"
            app:layout_constraintTop_toBottomOf="@+id/logo_elvis_text_login" />


        <EditText
            android:id="@+id/email_text_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/reg_log_edit_text"
            android:drawableStart="@drawable/ic_custom_email"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/login_email_address_text"
            android:paddingLeft="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/elvis_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temp_logo_text_login" />

        <EditText
            android:id="@+id/password_text_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/reg_log_edit_text"
            android:drawableStart="@drawable/ic_custom_lock"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/login_password_text"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/elvis_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text_login" />

        <Button
            android:id="@+id/login_button_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:text="@string/login_sign_in_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text_login" />

        <TextView
            android:id="@+id/new_to_elvis_text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:text="@string/login_new_to_elvis_text"
            android:textColor="@color/elvis_text_color"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button_login" />

        <TextView
            android:id="@+id/no_account_text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:text="@string/login_create_account_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>