<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/elvis_main_color">

        <ImageView
            android:id="@+id/reg_logo_img"
            android:layout_marginTop="40dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:foregroundGravity="center_vertical"
            android:src="@drawable/logo_big"
            app:layout_constraintBottom_toTopOf="@+id/username_text_reg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/username_text_reg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/reg_log_edit_text"
            android:drawableStart="@drawable/ic_custom_username"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/registration_username_text"
            android:inputType="textPersonName"
            android:paddingLeft="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/elvis_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_logo_img" />

        <EditText
            android:id="@+id/email_text_reg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/reg_log_edit_text"
            android:drawableStart="@drawable/ic_custom_email"
            android:inputType="textEmailAddress"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/login_email_address_text"
            android:paddingLeft="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/elvis_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_text_reg" />

        <EditText
            android:id="@+id/password_text_reg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/reg_log_edit_text"
            android:drawableStart="@drawable/ic_custom_lock"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/login_password_text"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/elvis_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text_reg" />

        <EditText
            android:id="@+id/password_again_text_reg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/reg_log_edit_text"
            android:drawableStart="@drawable/ic_custom_lock"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/login_password_text"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/elvis_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text_reg" />

        <Button
            android:id="@+id/create_acc_button_reg"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:text="@string/registration_create_account_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_again_text_reg" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>