<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/elvis_main_color"
    android:orientation="vertical"
    tools:context=".fragments.settings.ChatSettingsFragment">
<!--    Огавление-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_chat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/chat_settings"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

    </RelativeLayout>
<!--    Окно настройки чата-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_settings_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:textSize="18sp"
            android:text="@string/set_your_text_size"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/new_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="6dp"
            android:max="30"
            android:maxHeight="3dp"
            android:min="12"
            android:minHeight="3dp"
            android:progress="18"
            android:progressDrawable="@drawable/seek_bar_custom" />

        <TextView
            android:id="@+id/current_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="22dp"
            android:text="18"
            android:textColor="@color/white"
            android:textStyle="bold" />
<!--        Окно примера чата-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@drawable/background_for_example_in_chat_settings">
<!--            мы-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_chat_message_me_fake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/elvis_primary_light_variant_color"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="0dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:maxWidth="260dp"
                            android:paddingLeft="12dp"
                            android:paddingTop="8dp"
                            android:paddingRight="12dp"
                            android:text="Message"
                            android:textColor="@color/white"
                            android:textSize="16sp"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10:00"
                    android:textColor="@color/elvis_text_light_variant_color"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/card_chat_message_me_fake"
                    app:layout_constraintEnd_toStartOf="@+id/card_chat_message_me_fake" />

            </androidx.constraintlayout.widget.ConstraintLayout>
<!--            Другой чел-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_chat_message_other_fake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    app:cardBackgroundColor="@color/elvis_text_color"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="0dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="true"
                    tools:ignore="MissingConstraints">

                    <LinearLayout
                        android:id="@+id/layout_gchat_container_other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/msg_text_chat_other"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:maxWidth="260dp"
                            android:paddingLeft="12dp"
                            android:paddingTop="8dp"
                            android:paddingRight="12dp"
                            android:text="Message"
                            android:textColor="@color/white"
                            android:textSize="16sp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/time_text_chat_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10:00"
                    android:textColor="@color/elvis_text_light_variant_color"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/card_chat_message_other_fake"
                    app:layout_constraintStart_toEndOf="@+id/card_chat_message_other_fake" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>

    </RelativeLayout>

<!--    Настрока темы шрифат-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_settings_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/choose_text_theme"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="70dp"
                android:background="@color/white" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="70dp"
                android:layout_marginStart="15dp"
                android:background="@color/black" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="70dp"
                android:layout_marginStart="15dp"
                android:background="@color/purple_200" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="70dp"
                android:layout_marginStart="15dp"
                android:background="@color/elvis_main_color" />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>